--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+
+    "build-locale:en": "ng build --prod --i18n-locale en --i18n-format xlf --i18n-file src/translate/messages.en.xlf --output-path=dist/en --baseHref /en/",
+
+"build-locale:fr": "ng build --prod --i18n-locale fr --i18n-format xlf --i18n-file src/translate/messages.fr.xlf --output-path=dist/es --baseHref /fr/",
+
+"build-locale": "npm run build-locale:en && npm run build-locale:fr",
+"serve:ssr": "node dist/server"
+
   },
   "private": true,
   "dependencies": {
@@ -19,9 +27,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/xlsx": "0.0.36",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "ts-xlsx": "0.0.11",
     "tslib": "^1.9.0",
+    "xlsjs": "^1.0.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
